--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="./assets/logo.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Movie film  voir et créer sa liste des film préferer"
     />
 
-    <title>React App</title>
+    <title>Moviefilm-974</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
